fixheader spacing

--- a/src/Header.css
+++ b/src/Header.css
@@ -102,7 +102,6 @@ nav {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 0 5vw;
 }
 
 nav Button {
